add cmake install target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,5 @@ project(logger)
 include_directories("${CMAKE_SOURCE_DIR}/include")
 
 add_library(logger src/logger.cpp)
+
+install (TARGETS logger DESTINATION "lib")
